--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<!-- <img src="blinkingheart.gif" alt="description of image" style="position: absolute; left: 100px; top: 200px"> -->
 <body></body>
 <script>
-  const gif = document.createElement('img') 
-  gif.src = 'two-butterflies.gif'
-  gif.style.position = 'absolute'
-  gif.style.top = '100px'
-  gif.style.left = '100px'//imperative programming
-  document.body.appendChild(gif) //adds child gif.src
-
+  
+  
+  function createGif(x,y) { //don't forget to declare variables!!
+    const gif = document.createElement('img') 
+    gif.src = 'heart.gif'
+    gif.style.position = 'absolute'
+    gif.style.top = y + 'px'
+    gif.style.left = x + 'px'//imperative programming
+    document.body.appendChild(gif) //adds child gif.src
+  }
+  
+  for (let i = 0; i < 50; i++) {
+    const x = i * 50
+    createGif(x, 0)
+  }
+  
+  document.body.style.backgroundColor = 'black'
   
 </script>
